replaced hardcoded error messages with message property tags
GeoHash: http://maps.google.com/maps?q=MyCodingMap@52.066626,4.302139

--- a/portal/src/main/resources/i18n/messages.properties
+++ b/portal/src/main/resources/i18n/messages.properties
@@ -254,6 +254,15 @@ _portal.ui.notification.error=Error
 _portal.ui.notification.noitemsfound=No items found
 _portal.ui.reset.searchbox=Reset
 _portal.ui.viewingrelateditems=You are viewing related items
+_portal.ui.notification.recordNotFound=<strong>Alert:</strong> Unable to find the requested Europeana Record. <strong>Please</strong> try another search.
+_portal.ui.notification.tryAnotherSearch=<strong>Please</strong> try another search.
+_portal.ui.notification.generalErrorMessage=Something went wrong! An email has been sent to inform our technical staff.
+_portal.ui.notification.recordRevoked=<strong>Attention:</strong> This item has been withdrawn by the provider. <strong>Please</strong> try another search.
+_portal.ui.notification.solrUnreachable=<strong>Alert:</strong> Unable to get a response from the Search Engine. <strong>Please</strong> try another search later.
+_portal.ui.notification.malFormedQuery=Unable to fullfill your request due to malformed query parameters.
+_portal.ui.notification.recordNotIndexed=<strong>Attention:</strong> Requested Europeana Record is yet indexed. <strong>Please</strong> try another search.
+_portal.ui.notification.registrationIsExpired=The link you used to complete registration is invalid or has expired.
+_portal.ui.notification.pleaseRegisterAgain=Please <a href="/${portalName}/login.html">register your email again</a> to finish registration.
 _search.boolean.and=and
 _search.boolean.not=not
 _search.boolean.or=or
