Final sweep of the messages.properties refactoring to create category based tag key naming
GeoHash: http://maps.google.com/maps?q=MyCodingMap@53.058656,4.789633

--- a/portal/src/main/resources/i18n/messages_az.properties
+++ b/portal/src/main/resources/i18n/messages_az.properties
@@ -112,13 +112,13 @@ _metadata.dc.subject=Mövzu
 _metadata.dc.title=Sərlövhə
 _metadata.dc.type=Növ
 _metadata.dcterms.alternative=İkinci sərlövhə
-_metadata.dcterms.conforms.to=Uyğun gəlir
-_metadata.dcterms.has.format=Formatı var
-_metadata.dcterms.has.part=Təşkil olunub
-_metadata.dcterms.is.format.of=Formatıdır
-_metadata.dcterms.is.referenced.by=Əsaslanıb
-_metadata.dcterms.is.replaced.by=Yerləşdirilib
-_metadata.dcterms.ispart.of=Hissəsidir
+_metadata.dcterms.conformsTo=Uyğun gəlir
+_metadata.dcterms.hasFormat=Formatı var
+_metadata.dcterms.hasPart=Təşkil olunub
+_metadata.dcterms.isFormatOf=Formatıdır
+_metadata.dcterms.isPartOf=Hissəsidir
+_metadata.dcterms.isReferencedBy=Əsaslanıb
+_metadata.dcterms.isReplacedBy=Yerləşdirilib
 _metadata.dcterms.provenance=Provenance
 _metadata.dcterms.references=Əsaslanmışlar
 _metadata.dcterms.replaces=Əvəz edir
