--- a/portal/src/main/resources/i18n/messages_bg.properties
+++ b/portal/src/main/resources/i18n/messages_bg.properties
@@ -112,13 +112,13 @@ _metadata.dc.subject=Тема
 _metadata.dc.title=Заглавие
 _metadata.dc.type=Вид
 _metadata.dcterms.alternative=Алтернативно заглавие
-_metadata.dcterms.conforms.to=Следвам
-_metadata.dcterms.has.format=Има формат
-_metadata.dcterms.has.part=Има част
-_metadata.dcterms.is.format.of=Е формат от
-_metadata.dcterms.is.referenced.by=Е снабден с препратки от
-_metadata.dcterms.is.replaced.by=Е заместено от
-_metadata.dcterms.ispart.of=Е част от
+_metadata.dcterms.conformsTo=Следвам
+_metadata.dcterms.hasFormat=Има формат
+_metadata.dcterms.hasPart=Има част
+_metadata.dcterms.isFormatOf=Е формат от
+_metadata.dcterms.isPartOf=Е част от
+_metadata.dcterms.isReferencedBy=Е снабден с препратки от
+_metadata.dcterms.isReplacedBy=Е заместено от
 _metadata.dcterms.provenance=Произход
 _metadata.dcterms.references=Забележки
 _metadata.dcterms.replaces=Замести
