--- a/portal/src/main/resources/i18n/messages_bs.properties
+++ b/portal/src/main/resources/i18n/messages_bs.properties
@@ -112,13 +112,13 @@ _metadata.dc.subject=Predmet
 _metadata.dc.title=Naslov
 _metadata.dc.type=Tip
 _metadata.dcterms.alternative=Alternativni naslov
-_metadata.dcterms.conforms.to=Odgovara na
-_metadata.dcterms.has.format=Format
-_metadata.dcterms.has.part=Sadrži dio
-_metadata.dcterms.is.format.of=Je format od
-_metadata.dcterms.is.referenced.by=Upućeno na
-_metadata.dcterms.is.replaced.by=Zamijenjeno sa
-_metadata.dcterms.ispart.of=Je dio
+_metadata.dcterms.conformsTo=Odgovara na
+_metadata.dcterms.hasFormat=Format
+_metadata.dcterms.hasPart=Sadrži dio
+_metadata.dcterms.isFormatOf=Je format od
+_metadata.dcterms.isPartOf=Je dio
+_metadata.dcterms.isReferencedBy=Upućeno na
+_metadata.dcterms.isReplacedBy=Zamijenjeno sa
 _metadata.dcterms.provenance=Provenance
 _metadata.dcterms.references=Uputnice
 _metadata.dcterms.replaces=Zamjenjuje
