--- a/portal/src/main/resources/i18n/messages_ca.properties
+++ b/portal/src/main/resources/i18n/messages_ca.properties
@@ -112,13 +112,13 @@ _metadata.dc.subject=Matèria
 _metadata.dc.title=Títol
 _metadata.dc.type=Tipus
 _metadata.dcterms.alternative=Títol alternatiu
-_metadata.dcterms.conforms.to=D'acord amb
-_metadata.dcterms.has.format=Té format
-_metadata.dcterms.has.part=Té com a part
-_metadata.dcterms.is.format.of=És un format de
-_metadata.dcterms.is.referenced.by=Referenciat per
-_metadata.dcterms.is.replaced.by=Es substituït per
-_metadata.dcterms.ispart.of=És part de
+_metadata.dcterms.conformsTo=D'acord amb
+_metadata.dcterms.hasFormat=Té format
+_metadata.dcterms.hasPart=Té com a part
+_metadata.dcterms.isFormatOf=És un format de
+_metadata.dcterms.isPartOf=És part de
+_metadata.dcterms.isReferencedBy=Referenciat per
+_metadata.dcterms.isReplacedBy=Es substituït per
 _metadata.dcterms.provenance=Procedència
 _metadata.dcterms.references=Referències
 _metadata.dcterms.replaces=Substitueix
