--- a/portal/src/main/resources/i18n/messages_cs.properties
+++ b/portal/src/main/resources/i18n/messages_cs.properties
@@ -112,13 +112,13 @@ _metadata.dc.subject=Předmět
 _metadata.dc.title=Název
 _metadata.dc.type=Typ
 _metadata.dcterms.alternative=Alternativní název
-_metadata.dcterms.conforms.to=Odpovídá
-_metadata.dcterms.has.format=Je ve formátu
-_metadata.dcterms.has.part=Má část
-_metadata.dcterms.is.format.of=Je formátem
-_metadata.dcterms.is.referenced.by=Je odkazováno
-_metadata.dcterms.is.replaced.by=Je nahrazeno
-_metadata.dcterms.ispart.of=Je částí
+_metadata.dcterms.conformsTo=Odpovídá
+_metadata.dcterms.hasFormat=Je ve formátu
+_metadata.dcterms.hasPart=Má část
+_metadata.dcterms.isFormatOf=Je formátem
+_metadata.dcterms.isPartOf=Je částí
+_metadata.dcterms.isReferencedBy=Je odkazováno
+_metadata.dcterms.isReplacedBy=Je nahrazeno
 _metadata.dcterms.provenance=Provenience
 _metadata.dcterms.references=Odkazy
 _metadata.dcterms.replaces=Nahrazuje
