--- a/portal/src/main/resources/i18n/messages_da.properties
+++ b/portal/src/main/resources/i18n/messages_da.properties
@@ -112,13 +112,13 @@ _metadata.dc.subject=Emne
 _metadata.dc.title=Titel
 _metadata.dc.type=Ressourcetype
 _metadata.dcterms.alternative=Alternativ titel
-_metadata.dcterms.conforms.to=Conforms to
-_metadata.dcterms.has.format=Has format
-_metadata.dcterms.has.part=Has part
-_metadata.dcterms.is.format.of=Is format of
-_metadata.dcterms.is.referenced.by=Is referenced by
-_metadata.dcterms.is.replaced.by=Erstattes af
-_metadata.dcterms.ispart.of=Del af
+_metadata.dcterms.conformsTo=Conforms to
+_metadata.dcterms.hasFormat=Has format
+_metadata.dcterms.hasPart=Has part
+_metadata.dcterms.isFormatOf=Is format of
+_metadata.dcterms.isPartOf=Del af
+_metadata.dcterms.isReferencedBy=Is referenced by
+_metadata.dcterms.isReplacedBy=Erstattes af
 _metadata.dcterms.provenance=Oprindelse
 _metadata.dcterms.references=References
 _metadata.dcterms.replaces=Replaces
