--- a/portal/src/main/resources/i18n/messages_de.properties
+++ b/portal/src/main/resources/i18n/messages_de.properties
@@ -112,13 +112,13 @@ _metadata.dc.subject=Schlagwort
 _metadata.dc.title=Titel
 _metadata.dc.type=Typ
 _metadata.dcterms.alternative=Alternativer Titel
-_metadata.dcterms.conforms.to=entspricht
-_metadata.dcterms.has.format=hat Format
-_metadata.dcterms.has.part=hat Teil
-_metadata.dcterms.is.format.of=ist Format von
-_metadata.dcterms.is.referenced.by=wird referenziert von
-_metadata.dcterms.is.replaced.by=ist ersetzt durch
-_metadata.dcterms.ispart.of=Ist Teil von
+_metadata.dcterms.conformsTo=entspricht
+_metadata.dcterms.hasFormat=hat Format
+_metadata.dcterms.hasPart=hat Teil
+_metadata.dcterms.isFormatOf=ist Format von
+_metadata.dcterms.isPartOf=Ist Teil von
+_metadata.dcterms.isReferencedBy=wird referenziert von
+_metadata.dcterms.isReplacedBy=ist ersetzt durch
 _metadata.dcterms.provenance=Herkunft
 _metadata.dcterms.references=referenziert
 _metadata.dcterms.replaces=ersetzt
