--- a/portal/src/main/resources/i18n/messages_el.properties
+++ b/portal/src/main/resources/i18n/messages_el.properties
@@ -112,13 +112,13 @@ _metadata.dc.subject=Θέμα
 _metadata.dc.title=Τίτλος
 _metadata.dc.type=Τύπος
 _metadata.dcterms.alternative=Εναλλακτικός τίτλος
-_metadata.dcterms.conforms.to=Συμμορφώνεται με το
-_metadata.dcterms.has.format=Έχει ως μορφότυπο
-_metadata.dcterms.has.part=Έχει ως μέρος
-_metadata.dcterms.is.format.of=Είναι μορφότυπο τού
-_metadata.dcterms.is.referenced.by=Αναφέρεται από
-_metadata.dcterms.is.replaced.by=Αντικαθίσταται από
-_metadata.dcterms.ispart.of=Μέρος του
+_metadata.dcterms.conformsTo=Συμμορφώνεται με το
+_metadata.dcterms.hasFormat=Έχει ως μορφότυπο
+_metadata.dcterms.hasPart=Έχει ως μέρος
+_metadata.dcterms.isFormatOf=Είναι μορφότυπο τού
+_metadata.dcterms.isPartOf=Μέρος του
+_metadata.dcterms.isReferencedBy=Αναφέρεται από
+_metadata.dcterms.isReplacedBy=Αντικαθίσταται από
 _metadata.dcterms.provenance=Προέλευση
 _metadata.dcterms.references=Αναφορές
 _metadata.dcterms.replaces=Αντικαθιστά
