--- a/portal/src/main/resources/i18n/messages_en.properties
+++ b/portal/src/main/resources/i18n/messages_en.properties
@@ -142,7 +142,7 @@ _locale.sk=Slovak (slo)
 _locale.sl=Slovenian (slv)
 _locale.sr=Serbian (scc)
 _locale.sv=Swedish (sve/swe)
-_metadata.abm.contentprovider=Provider
+_metadata.abm.contentProvider=Provider
 _metadata.abm.county=County
 _metadata.abm.data.provider=Provider
 _metadata.abm.municipality=Municipality
@@ -162,14 +162,14 @@ _metadata.dc.subject=Subject
 _metadata.dc.title=Title
 _metadata.dc.type=Type
 _metadata.dcterms.alternative=Alternative Title
-_metadata.dcterms.conforms.to=Conforms to
+_metadata.dcterms.conformsTo=Conforms to
 _metadata.dcterms.created=Date
-_metadata.dcterms.has.format=Has format
-_metadata.dcterms.has.part=Has part
-_metadata.dcterms.is.format.of=Is format of
-_metadata.dcterms.is.referenced.by=Is referenced by
-_metadata.dcterms.is.replaced.by=Is replaced by
-_metadata.dcterms.ispart.of=Is Part of
+_metadata.dcterms.hasFormat=Has format
+_metadata.dcterms.hasPart=Has part
+_metadata.dcterms.isFormatOf=Is format of
+_metadata.dcterms.isPartOf=Is Part of
+_metadata.dcterms.isReferencedBy=Is referenced by
+_metadata.dcterms.isReplacedBy=Is replaced by
 _metadata.dcterms.provenance=Provenance
 _metadata.dcterms.references=References
 _metadata.dcterms.replaces=Replaces
@@ -177,7 +177,7 @@ _metadata.dcterms.requires=Requires
 _metadata.dcterms.spatial=Spatial coverage
 _metadata.dcterms.temporal=Temporal coverage
 _metadata.europeana.country=Country
-_metadata.europeana.data.provider=Provider
+_metadata.europeana.dataProvider=Provider
 _metadata.europeana.provider=Provider
 _metadata.europeana.type=Type
 _metadata.searchfield.contributor=Contributor
