--- a/portal/src/main/resources/i18n/messages_es.properties
+++ b/portal/src/main/resources/i18n/messages_es.properties
@@ -112,13 +112,13 @@ _metadata.dc.subject=Materia
 _metadata.dc.title=Título
 _metadata.dc.type=Tipo
 _metadata.dcterms.alternative=Título Alternativo
-_metadata.dcterms.conforms.to=De acuerdo a
-_metadata.dcterms.has.format=Tiene formato
-_metadata.dcterms.has.part=Tiene parte
-_metadata.dcterms.is.format.of=Es formato de
-_metadata.dcterms.is.referenced.by=Es referido por
-_metadata.dcterms.is.replaced.by=Es sustituido por
-_metadata.dcterms.ispart.of=Parte de
+_metadata.dcterms.conformsTo=De acuerdo a
+_metadata.dcterms.hasFormat=Tiene formato
+_metadata.dcterms.hasPart=Tiene parte
+_metadata.dcterms.isFormatOf=Es formato de
+_metadata.dcterms.isPartOf=Parte de
+_metadata.dcterms.isReferencedBy=Es referido por
+_metadata.dcterms.isReplacedBy=Es sustituido por
 _metadata.dcterms.provenance=Propiedad
 _metadata.dcterms.references=Referencias
 _metadata.dcterms.replaces=Sustituye
