--- a/portal/src/main/resources/i18n/messages_et.properties
+++ b/portal/src/main/resources/i18n/messages_et.properties
@@ -112,13 +112,13 @@ _metadata.dc.subject=Teema
 _metadata.dc.title=Pealkiri
 _metadata.dc.type=Tüüp
 _metadata.dcterms.alternative=Teine pealkiri
-_metadata.dcterms.conforms.to=On kooskõlas
-_metadata.dcterms.has.format=Omab vormingut:
-_metadata.dcterms.has.part=Omab osa:
-_metadata.dcterms.is.format.of=On vorming:
-_metadata.dcterms.is.referenced.by=On viidatud
-_metadata.dcterms.is.replaced.by=On asendatud
-_metadata.dcterms.ispart.of=On osa:
+_metadata.dcterms.conformsTo=On kooskõlas
+_metadata.dcterms.hasFormat=Omab vormingut:
+_metadata.dcterms.hasPart=Omab osa:
+_metadata.dcterms.isFormatOf=On vorming:
+_metadata.dcterms.isPartOf=On osa:
+_metadata.dcterms.isReferencedBy=On viidatud
+_metadata.dcterms.isReplacedBy=On asendatud
 _metadata.dcterms.provenance=Provenients
 _metadata.dcterms.references=Viitab
 _metadata.dcterms.replaces=Asendab
