--- a/portal/src/main/resources/i18n/messages_fi.properties
+++ b/portal/src/main/resources/i18n/messages_fi.properties
@@ -112,13 +112,13 @@ _metadata.dc.subject=Aihe
 _metadata.dc.title=Nimeke
 _metadata.dc.type=Laji
 _metadata.dcterms.alternative=Vaihtoehtoinen nimeke
-_metadata.dcterms.conforms.to=On yhdenmukainen
-_metadata.dcterms.has.format=On formaatissa
-_metadata.dcterms.has.part=Sisältää osan
-_metadata.dcterms.is.format.of=On tämän formaatti
-_metadata.dcterms.is.referenced.by=Viitattu seuraavassa
-_metadata.dcterms.is.replaced.by=On korvattu seuraavalla
-_metadata.dcterms.ispart.of=Osa teoksesta
+_metadata.dcterms.conformsTo=On yhdenmukainen
+_metadata.dcterms.hasFormat=On formaatissa
+_metadata.dcterms.hasPart=Sisältää osan
+_metadata.dcterms.isFormatOf=On tämän formaatti
+_metadata.dcterms.isPartOf=Osa teoksesta
+_metadata.dcterms.isReferencedBy=Viitattu seuraavassa
+_metadata.dcterms.isReplacedBy=On korvattu seuraavalla
 _metadata.dcterms.provenance=Historiatieto
 _metadata.dcterms.references=Viittauksen
 _metadata.dcterms.replaces=Korvaa
