--- a/portal/src/main/resources/i18n/messages_fr.properties
+++ b/portal/src/main/resources/i18n/messages_fr.properties
@@ -112,13 +112,13 @@ _metadata.dc.subject=Sujet
 _metadata.dc.title=Titre
 _metadata.dc.type=Type
 _metadata.dcterms.alternative=Titre alternatif
-_metadata.dcterms.conforms.to=Conforme à
-_metadata.dcterms.has.format=a le format
-_metadata.dcterms.has.part=Comprend
-_metadata.dcterms.is.format.of=est le format de
-_metadata.dcterms.is.referenced.by=Est référencé par
-_metadata.dcterms.is.replaced.by=Est remplacé par
-_metadata.dcterms.ispart.of=Fait partie de
+_metadata.dcterms.conformsTo=Conforme à
+_metadata.dcterms.hasFormat=a le format
+_metadata.dcterms.hasPart=Comprend
+_metadata.dcterms.isFormatOf=est le format de
+_metadata.dcterms.isPartOf=Fait partie de
+_metadata.dcterms.isReferencedBy=Est référencé par
+_metadata.dcterms.isReplacedBy=Est remplacé par
 _metadata.dcterms.provenance=Provenance
 _metadata.dcterms.references=Référence
 _metadata.dcterms.replaces=Remplace
