--- a/portal/src/main/resources/i18n/messages_ga.properties
+++ b/portal/src/main/resources/i18n/messages_ga.properties
@@ -112,13 +112,13 @@ _metadata.dc.subject=Ábhar
 _metadata.dc.title=Teideal
 _metadata.dc.type=Sórt
 _metadata.dcterms.alternative=Teideal Malartach
-_metadata.dcterms.conforms.to=Comhlíonann le
-_metadata.dcterms.has.format=Tá formáid aige
-_metadata.dcterms.has.part=tá cuid ag
-_metadata.dcterms.is.format.of=Tá... mar fhormáid de
-_metadata.dcterms.is.referenced.by=Tá... tagartha ag
-_metadata.dcterms.is.replaced.by=Tá...ionadaithe ag
-_metadata.dcterms.ispart.of=Tá... mar chuid de
+_metadata.dcterms.conformsTo=Comhlíonann le
+_metadata.dcterms.hasFormat=Tá formáid aige
+_metadata.dcterms.hasPart=tá cuid ag
+_metadata.dcterms.isFormatOf=Tá... mar fhormáid de
+_metadata.dcterms.isPartOf=Tá... mar chuid de
+_metadata.dcterms.isReferencedBy=Tá... tagartha ag
+_metadata.dcterms.isReplacedBy=Tá...ionadaithe ag
 _metadata.dcterms.provenance=Úinéireacht
 _metadata.dcterms.references=Tagairtí
 _metadata.dcterms.replaces=Ionadaíonn
