--- a/portal/src/main/resources/i18n/messages_hu.properties
+++ b/portal/src/main/resources/i18n/messages_hu.properties
@@ -112,13 +112,13 @@ _metadata.dc.subject=Tárgyszó
 _metadata.dc.title=Cím
 _metadata.dc.type=Típus
 _metadata.dcterms.alternative=Párhuzamos cím
-_metadata.dcterms.conforms.to=Összhangban
-_metadata.dcterms.has.format=Formátumú
-_metadata.dcterms.has.part=Részben
-_metadata.dcterms.is.format.of=Formátumú
-_metadata.dcterms.is.referenced.by=Hivatkozva
-_metadata.dcterms.is.replaced.by=Felcserélve
-_metadata.dcterms.ispart.of=Része
+_metadata.dcterms.conformsTo=Összhangban
+_metadata.dcterms.hasFormat=Formátumú
+_metadata.dcterms.hasPart=Részben
+_metadata.dcterms.isFormatOf=Formátumú
+_metadata.dcterms.isPartOf=Része
+_metadata.dcterms.isReferencedBy=Hivatkozva
+_metadata.dcterms.isReplacedBy=Felcserélve
 _metadata.dcterms.provenance=Származás
 _metadata.dcterms.references=Hivatkozás
 _metadata.dcterms.replaces=Helyettesít
