--- a/portal/src/main/resources/i18n/messages_is.properties
+++ b/portal/src/main/resources/i18n/messages_is.properties
@@ -112,13 +112,13 @@ _metadata.dc.subject=Efni
 _metadata.dc.title=Titill
 _metadata.dc.type=Tegund
 _metadata.dcterms.alternative=Annar titill
-_metadata.dcterms.conforms.to=Svarar til
-_metadata.dcterms.has.format=Á forminu
-_metadata.dcterms.has.part=Hefur hluta
-_metadata.dcterms.is.format.of=Er á forminu
-_metadata.dcterms.is.referenced.by=Vísað í af
-_metadata.dcterms.is.replaced.by=Í staðinn fyrir
-_metadata.dcterms.ispart.of=Er hluti af
+_metadata.dcterms.conformsTo=Svarar til
+_metadata.dcterms.hasFormat=Á forminu
+_metadata.dcterms.hasPart=Hefur hluta
+_metadata.dcterms.isFormatOf=Er á forminu
+_metadata.dcterms.isPartOf=Er hluti af
+_metadata.dcterms.isReferencedBy=Vísað í af
+_metadata.dcterms.isReplacedBy=Í staðinn fyrir
 _metadata.dcterms.provenance=Ferill skjals
 _metadata.dcterms.references=Tilvísanir
 _metadata.dcterms.replaces=Kemur í stað
