--- a/portal/src/main/resources/i18n/messages_it.properties
+++ b/portal/src/main/resources/i18n/messages_it.properties
@@ -112,13 +112,13 @@ _metadata.dc.subject=Soggetto
 _metadata.dc.title=Titolo
 _metadata.dc.type=Tipo
 _metadata.dcterms.alternative=Titolo alternativo
-_metadata.dcterms.conforms.to=E' conforme a
-_metadata.dcterms.has.format=Ha formato
-_metadata.dcterms.has.part=Include
-_metadata.dcterms.is.format.of=E' formato di
-_metadata.dcterms.is.referenced.by=E' riferito da
-_metadata.dcterms.is.replaced.by=E' sostituito da
-_metadata.dcterms.ispart.of=E' parte di
+_metadata.dcterms.conformsTo=E' conforme a
+_metadata.dcterms.hasFormat=Ha formato
+_metadata.dcterms.hasPart=Include
+_metadata.dcterms.isFormatOf=E' formato di
+_metadata.dcterms.isPartOf=E' parte di
+_metadata.dcterms.isReferencedBy=E' riferito da
+_metadata.dcterms.isReplacedBy=E' sostituito da
 _metadata.dcterms.provenance=Provenienza
 _metadata.dcterms.references=Riferimenti
 _metadata.dcterms.replaces=Sostituisce
