--- a/portal/src/main/resources/i18n/messages_ka.properties
+++ b/portal/src/main/resources/i18n/messages_ka.properties
@@ -112,13 +112,13 @@ _metadata.dc.subject=თემატიკა
 _metadata.dc.title=სახელწოდება
 _metadata.dc.type=ტიპი
 _metadata.dcterms.alternative=ალტერნატიული სახელწოდება
-_metadata.dcterms.conforms.to=შეესაბამება
-_metadata.dcterms.has.format=აქვს შემდეგი ფორმატი
-_metadata.dcterms.has.part=აქვს ნაწილი
-_metadata.dcterms.is.format.of=წარმოადგენს შემდეგის ფორმატს
-_metadata.dcterms.is.referenced.by=Is referenced by
-_metadata.dcterms.is.replaced.by=შენაცვლებულია
-_metadata.dcterms.ispart.of=ნაწილია
+_metadata.dcterms.conformsTo=შეესაბამება
+_metadata.dcterms.hasFormat=აქვს შემდეგი ფორმატი
+_metadata.dcterms.hasPart=აქვს ნაწილი
+_metadata.dcterms.isFormatOf=წარმოადგენს შემდეგის ფორმატს
+_metadata.dcterms.isPartOf=ნაწილია
+_metadata.dcterms.isReferencedBy=Is referenced by
+_metadata.dcterms.isReplacedBy=შენაცვლებულია
 _metadata.dcterms.provenance=Provenance
 _metadata.dcterms.references=References
 _metadata.dcterms.replaces=ენაცვლება
