--- a/portal/src/main/resources/i18n/messages_lt.properties
+++ b/portal/src/main/resources/i18n/messages_lt.properties
@@ -112,13 +112,13 @@ _metadata.dc.subject=Dalykas
 _metadata.dc.title=Antraštė
 _metadata.dc.type=Tipas
 _metadata.dcterms.alternative=Gretutinė antraštė
-_metadata.dcterms.conforms.to=Atitinka
-_metadata.dcterms.has.format=Turi formatą
-_metadata.dcterms.has.part=Turi dalį
-_metadata.dcterms.is.format.of=Yra formatas
-_metadata.dcterms.is.referenced.by=Nuorodos pateiktos
-_metadata.dcterms.is.replaced.by=Pakeista
-_metadata.dcterms.ispart.of=Yra dalis
+_metadata.dcterms.conformsTo=Atitinka
+_metadata.dcterms.hasFormat=Turi formatą
+_metadata.dcterms.hasPart=Turi dalį
+_metadata.dcterms.isFormatOf=Yra formatas
+_metadata.dcterms.isPartOf=Yra dalis
+_metadata.dcterms.isReferencedBy=Nuorodos pateiktos
+_metadata.dcterms.isReplacedBy=Pakeista
 _metadata.dcterms.provenance=Kilmė
 _metadata.dcterms.references=Nuorodos
 _metadata.dcterms.replaces=Pakeitimai
