--- a/portal/src/main/resources/i18n/messages_lv.properties
+++ b/portal/src/main/resources/i18n/messages_lv.properties
@@ -112,13 +112,13 @@ _metadata.dc.subject=Priekšmets
 _metadata.dc.title=Nosaukums
 _metadata.dc.type=Tips
 _metadata.dcterms.alternative=Cits nosaukums
-_metadata.dcterms.conforms.to=Atbilst
-_metadata.dcterms.has.format=Ir formāts
-_metadata.dcterms.has.part=Satur daļu
-_metadata.dcterms.is.format.of=ir formāts no
-_metadata.dcterms.is.referenced.by=Ir dota atsauce no
-_metadata.dcterms.is.replaced.by=Ir aizvietota ar
-_metadata.dcterms.ispart.of=Daļa no
+_metadata.dcterms.conformsTo=Atbilst
+_metadata.dcterms.hasFormat=Ir formāts
+_metadata.dcterms.hasPart=Satur daļu
+_metadata.dcterms.isFormatOf=ir formāts no
+_metadata.dcterms.isPartOf=Daļa no
+_metadata.dcterms.isReferencedBy=Ir dota atsauce no
+_metadata.dcterms.isReplacedBy=Ir aizvietota ar
 _metadata.dcterms.provenance=Izcelsme
 _metadata.dcterms.references=Atsauces
 _metadata.dcterms.replaces=Aizvieto
