--- a/portal/src/main/resources/i18n/messages_mk.properties
+++ b/portal/src/main/resources/i18n/messages_mk.properties
@@ -112,13 +112,13 @@ _metadata.dc.subject=Предмет
 _metadata.dc.title=Наслов
 _metadata.dc.type=Вид
 _metadata.dcterms.alternative=Алтернативен наслов
-_metadata.dcterms.conforms.to=Одговара на
-_metadata.dcterms.has.format=Има формат
-_metadata.dcterms.has.part=Има дел
-_metadata.dcterms.is.format.of=Е формат на
-_metadata.dcterms.is.referenced.by=Се упатува од
-_metadata.dcterms.is.replaced.by=Е заменет од
-_metadata.dcterms.ispart.of=Е дел од
+_metadata.dcterms.conformsTo=Одговара на
+_metadata.dcterms.hasFormat=Има формат
+_metadata.dcterms.hasPart=Има дел
+_metadata.dcterms.isFormatOf=Е формат на
+_metadata.dcterms.isPartOf=Е дел од
+_metadata.dcterms.isReferencedBy=Се упатува од
+_metadata.dcterms.isReplacedBy=Е заменет од
 _metadata.dcterms.provenance=Provenance
 _metadata.dcterms.references=Референци
 _metadata.dcterms.replaces=Заменува
