--- a/portal/src/main/resources/i18n/messages_mt.properties
+++ b/portal/src/main/resources/i18n/messages_mt.properties
@@ -112,13 +112,13 @@ _metadata.dc.subject=Suġġett
 _metadata.dc.title=Titlu
 _metadata.dc.type=Tip
 _metadata.dcterms.alternative=Titlu Alternattiv
-_metadata.dcterms.conforms.to=Jaqbel ma'
-_metadata.dcterms.has.format=Għandu format
-_metadata.dcterms.has.part=Għandu parti
-_metadata.dcterms.is.format.of=Hu format ta'
-_metadata.dcterms.is.referenced.by=Irreferenzjat minn
-_metadata.dcterms.is.replaced.by=Mibdul bi
-_metadata.dcterms.ispart.of=Jagħmel Parti minn
+_metadata.dcterms.conformsTo=Jaqbel ma'
+_metadata.dcterms.hasFormat=Għandu format
+_metadata.dcterms.hasPart=Għandu parti
+_metadata.dcterms.isFormatOf=Hu format ta'
+_metadata.dcterms.isPartOf=Jagħmel Parti minn
+_metadata.dcterms.isReferencedBy=Irreferenzjat minn
+_metadata.dcterms.isReplacedBy=Mibdul bi
 _metadata.dcterms.provenance=Provenjenza
 _metadata.dcterms.references=Referenzi
 _metadata.dcterms.replaces=Jieħu post
