--- a/portal/src/main/resources/i18n/messages_nl.properties
+++ b/portal/src/main/resources/i18n/messages_nl.properties
@@ -141,13 +141,13 @@ _metadata.dc.subject=Trefwoorden
 _metadata.dc.title=Titel
 _metadata.dc.type=Soort object
 _metadata.dcterms.alternative=Titel
-_metadata.dcterms.conforms.to=Voldoet aan
-_metadata.dcterms.has.format=Heeft formaat
-_metadata.dcterms.has.part=Is onderdeel
-_metadata.dcterms.is.format.of=Is formaat van
-_metadata.dcterms.is.referenced.by=Is verwezen door
-_metadata.dcterms.is.replaced.by=Is vervangen door
-_metadata.dcterms.ispart.of=Is deel van
+_metadata.dcterms.conformsTo=Voldoet aan
+_metadata.dcterms.hasFormat=Heeft formaat
+_metadata.dcterms.hasPart=Is onderdeel
+_metadata.dcterms.isFormatOf=Is formaat van
+_metadata.dcterms.isPartOf=Is deel van
+_metadata.dcterms.isReferencedBy=Is verwezen door
+_metadata.dcterms.isReplacedBy=Is vervangen door
 _metadata.dcterms.provenance=Herkomst
 _metadata.dcterms.references=Referenties
 _metadata.dcterms.replaces=Vervangt
