--- a/portal/src/main/resources/i18n/messages_pl.properties
+++ b/portal/src/main/resources/i18n/messages_pl.properties
@@ -112,13 +112,13 @@ _metadata.dc.subject=Temat
 _metadata.dc.title=Tytuł
 _metadata.dc.type=Typ
 _metadata.dcterms.alternative=Tytuł odmienny
-_metadata.dcterms.conforms.to=Stosuje się do
-_metadata.dcterms.has.format=Ma format
-_metadata.dcterms.has.part=Jest częścią
-_metadata.dcterms.is.format.of=Jest formatem
-_metadata.dcterms.is.referenced.by=Jest odsyłaczem od
-_metadata.dcterms.is.replaced.by=Jest zastępowane przez
-_metadata.dcterms.ispart.of=Stanowi część
+_metadata.dcterms.conformsTo=Stosuje się do
+_metadata.dcterms.hasFormat=Ma format
+_metadata.dcterms.hasPart=Jest częścią
+_metadata.dcterms.isFormatOf=Jest formatem
+_metadata.dcterms.isPartOf=Stanowi część
+_metadata.dcterms.isReferencedBy=Jest odsyłaczem od
+_metadata.dcterms.isReplacedBy=Jest zastępowane przez
 _metadata.dcterms.provenance=Proweniencja
 _metadata.dcterms.references=Odsyła do
 _metadata.dcterms.replaces=Zastępuje
