--- a/portal/src/main/resources/i18n/messages_pt.properties
+++ b/portal/src/main/resources/i18n/messages_pt.properties
@@ -112,13 +112,13 @@ _metadata.dc.subject=Assunto
 _metadata.dc.title=Título
 _metadata.dc.type=Tipo
 _metadata.dcterms.alternative=Título Alternativo
-_metadata.dcterms.conforms.to=Está conforme com
-_metadata.dcterms.has.format=Tem formato
-_metadata.dcterms.has.part=Tem parte
-_metadata.dcterms.is.format.of=É formato de
-_metadata.dcterms.is.referenced.by=É referenciado por
-_metadata.dcterms.is.replaced.by=É substituído por
-_metadata.dcterms.ispart.of=Parte de
+_metadata.dcterms.conformsTo=Está conforme com
+_metadata.dcterms.hasFormat=Tem formato
+_metadata.dcterms.hasPart=Tem parte
+_metadata.dcterms.isFormatOf=É formato de
+_metadata.dcterms.isPartOf=Parte de
+_metadata.dcterms.isReferencedBy=É referenciado por
+_metadata.dcterms.isReplacedBy=É substituído por
 _metadata.dcterms.provenance=Proveniência
 _metadata.dcterms.references=Referências
 _metadata.dcterms.replaces=Substitui
