--- a/portal/src/main/resources/i18n/messages_ro.properties
+++ b/portal/src/main/resources/i18n/messages_ro.properties
@@ -112,13 +112,13 @@ _metadata.dc.subject=Subiect
 _metadata.dc.title=Titlu
 _metadata.dc.type=Tip
 _metadata.dcterms.alternative=Titlu alternativ
-_metadata.dcterms.conforms.to=Conform cu
-_metadata.dcterms.has.format=Are ca format
-_metadata.dcterms.has.part=Are ca parte pe
-_metadata.dcterms.is.format.of=Este un alt format al
-_metadata.dcterms.is.referenced.by=Referit de către
-_metadata.dcterms.is.replaced.by=Este înlocuit cu
-_metadata.dcterms.ispart.of=Este parte a
+_metadata.dcterms.conformsTo=Conform cu
+_metadata.dcterms.hasFormat=Are ca format
+_metadata.dcterms.hasPart=Are ca parte pe
+_metadata.dcterms.isFormatOf=Este un alt format al
+_metadata.dcterms.isPartOf=Este parte a
+_metadata.dcterms.isReferencedBy=Referit de către
+_metadata.dcterms.isReplacedBy=Este înlocuit cu
 _metadata.dcterms.provenance=Provenienţă
 _metadata.dcterms.references=Referinţe
 _metadata.dcterms.replaces=Înlocuieşte
