--- a/portal/src/main/resources/i18n/messages_ru.properties
+++ b/portal/src/main/resources/i18n/messages_ru.properties
@@ -112,13 +112,13 @@ _metadata.dc.subject=Тема
 _metadata.dc.title=Название
 _metadata.dc.type=Тип
 _metadata.dcterms.alternative=Второе название
-_metadata.dcterms.conforms.to=Соответствует
-_metadata.dcterms.has.format=Имеет формат
-_metadata.dcterms.has.part=Состоит из
-_metadata.dcterms.is.format.of=Является форматом
-_metadata.dcterms.is.referenced.by=Ссылка с
-_metadata.dcterms.is.replaced.by=Заменено
-_metadata.dcterms.ispart.of=Является частью
+_metadata.dcterms.conformsTo=Соответствует
+_metadata.dcterms.hasFormat=Имеет формат
+_metadata.dcterms.hasPart=Состоит из
+_metadata.dcterms.isFormatOf=Является форматом
+_metadata.dcterms.isPartOf=Является частью
+_metadata.dcterms.isReferencedBy=Ссылка с
+_metadata.dcterms.isReplacedBy=Заменено
 _metadata.dcterms.provenance=Provenance
 _metadata.dcterms.references=Ссылки
 _metadata.dcterms.replaces=Заменяет
