--- a/portal/src/main/resources/i18n/messages_sl.properties
+++ b/portal/src/main/resources/i18n/messages_sl.properties
@@ -112,13 +112,13 @@ _metadata.dc.subject=Vsebina
 _metadata.dc.title=Naslov
 _metadata.dc.type=Vrsta gradiva
 _metadata.dcterms.alternative=Alternativni naslov
-_metadata.dcterms.conforms.to=Ustreza
-_metadata.dcterms.has.format=V formatu
-_metadata.dcterms.has.part=Vsebuje del
-_metadata.dcterms.is.format.of=Je format
-_metadata.dcterms.is.referenced.by=Referenca v
-_metadata.dcterms.is.replaced.by=Nadomeščeno z
-_metadata.dcterms.ispart.of=je del
+_metadata.dcterms.conformsTo=Ustreza
+_metadata.dcterms.hasFormat=V formatu
+_metadata.dcterms.hasPart=Vsebuje del
+_metadata.dcterms.isFormatOf=Je format
+_metadata.dcterms.isPartOf=je del
+_metadata.dcterms.isReferencedBy=Referenca v
+_metadata.dcterms.isReplacedBy=Nadomeščeno z
 _metadata.dcterms.provenance=Vir
 _metadata.dcterms.references=Reference
 _metadata.dcterms.replaces=Nadomešča
