--- a/portal/src/main/resources/i18n/messages_sr.properties
+++ b/portal/src/main/resources/i18n/messages_sr.properties
@@ -112,13 +112,13 @@ _metadata.dc.subject=Predmet
 _metadata.dc.title=Naslov
 _metadata.dc.type=Vrsta izvora
 _metadata.dcterms.alternative=Alternativni naslov
-_metadata.dcterms.conforms.to=Odgovara
-_metadata.dcterms.has.format=U formatu
-_metadata.dcterms.has.part=Sadrži deo
-_metadata.dcterms.is.format.of=je format
-_metadata.dcterms.is.referenced.by=upućeno na
-_metadata.dcterms.is.replaced.by=zamenjeno je sa
-_metadata.dcterms.ispart.of=Deo
+_metadata.dcterms.conformsTo=Odgovara
+_metadata.dcterms.hasFormat=U formatu
+_metadata.dcterms.hasPart=Sadrži deo
+_metadata.dcterms.isFormatOf=je format
+_metadata.dcterms.isPartOf=Deo
+_metadata.dcterms.isReferencedBy=upućeno na
+_metadata.dcterms.isReplacedBy=zamenjeno je sa
 _metadata.dcterms.provenance=Provenance
 _metadata.dcterms.references=Uputnice
 _metadata.dcterms.replaces=Zamenjuje
