--- a/portal/src/main/resources/i18n/messages_sv.properties
+++ b/portal/src/main/resources/i18n/messages_sv.properties
@@ -112,13 +112,13 @@ _metadata.dc.subject=Ämne
 _metadata.dc.title=Titel
 _metadata.dc.type=Resurstyp
 _metadata.dcterms.alternative=Alternativ titel
-_metadata.dcterms.conforms.to=motsvarar
-_metadata.dcterms.has.format=Har format
-_metadata.dcterms.has.part=Har delen
-_metadata.dcterms.is.format.of=Är format av
-_metadata.dcterms.is.referenced.by=Refereras av
-_metadata.dcterms.is.replaced.by=Ersatt av
-_metadata.dcterms.ispart.of=Del av
+_metadata.dcterms.conformsTo=motsvarar
+_metadata.dcterms.hasFormat=Har format
+_metadata.dcterms.hasPart=Har delen
+_metadata.dcterms.isFormatOf=Är format av
+_metadata.dcterms.isPartOf=Del av
+_metadata.dcterms.isReferencedBy=Refereras av
+_metadata.dcterms.isReplacedBy=Ersatt av
 _metadata.dcterms.provenance=Ursprung
 _metadata.dcterms.references=Referenser
 _metadata.dcterms.replaces=Ersätter
