--- a/portal/src/main/resources/i18n/messages_tr.properties
+++ b/portal/src/main/resources/i18n/messages_tr.properties
@@ -112,13 +112,13 @@ _metadata.dc.subject=Konu
 _metadata.dc.title=Başlık
 _metadata.dc.type=Tür
 _metadata.dcterms.alternative=Alternatif başlık
-_metadata.dcterms.conforms.to=.. uygun
-_metadata.dcterms.has.format=formatı var
-_metadata.dcterms.has.part=.. da yeri var
-_metadata.dcterms.is.format.of=.. nın formatı
-_metadata.dcterms.is.referenced.by=.. a dayandırılmaktadır
-_metadata.dcterms.is.replaced.by=.. değiştirildi
-_metadata.dcterms.ispart.of=.. parçası
+_metadata.dcterms.conformsTo=.. uygun
+_metadata.dcterms.hasFormat=formatı var
+_metadata.dcterms.hasPart=.. da yeri var
+_metadata.dcterms.isFormatOf=.. nın formatı
+_metadata.dcterms.isPartOf=.. parçası
+_metadata.dcterms.isReferencedBy=.. a dayandırılmaktadır
+_metadata.dcterms.isReplacedBy=.. değiştirildi
 _metadata.dcterms.provenance=Provenance
 _metadata.dcterms.references=Referanslar
 _metadata.dcterms.replaces=Değiştirilenler
