--- a/portal/src/main/resources/i18n/messages_uk.properties
+++ b/portal/src/main/resources/i18n/messages_uk.properties
@@ -112,13 +112,13 @@ _metadata.dc.subject=Предмет
 _metadata.dc.title=Назва
 _metadata.dc.type=Тип
 _metadata.dcterms.alternative=Друга назва
-_metadata.dcterms.conforms.to=Відповідає
-_metadata.dcterms.has.format=Має формат
-_metadata.dcterms.has.part=Містить
-_metadata.dcterms.is.format.of=Є форматом
-_metadata.dcterms.is.referenced.by=Посилання з
-_metadata.dcterms.is.replaced.by=Замінено
-_metadata.dcterms.ispart.of=Є частиною
+_metadata.dcterms.conformsTo=Відповідає
+_metadata.dcterms.hasFormat=Має формат
+_metadata.dcterms.hasPart=Містить
+_metadata.dcterms.isFormatOf=Є форматом
+_metadata.dcterms.isPartOf=Є частиною
+_metadata.dcterms.isReferencedBy=Посилання з
+_metadata.dcterms.isReplacedBy=Замінено
 _metadata.dcterms.provenance=Provenance
 _metadata.dcterms.references=Посилання
 _metadata.dcterms.replaces=Замінює
