--- a/portal/src/main/resources/i18n/messages_xx.properties
+++ b/portal/src/main/resources/i18n/messages_xx.properties
@@ -112,13 +112,13 @@ _metadata.dc.subject=XXXXXX
 _metadata.dc.title=XXXXXX
 _metadata.dc.type=XXXXXX
 _metadata.dcterms.alternative=XXXXXX
-_metadata.dcterms.conforms.to=XXXXXX
-_metadata.dcterms.has.format=XXXXXX
-_metadata.dcterms.has.part=XXXXXX
-_metadata.dcterms.is.format.of=XXXXXX
-_metadata.dcterms.is.referenced.by=XXXXXX
-_metadata.dcterms.is.replaced.by=XXXXXX
-_metadata.dcterms.ispart.of=XXXXXX
+_metadata.dcterms.conformsTo=XXXXXX
+_metadata.dcterms.hasFormat=XXXXXX
+_metadata.dcterms.hasPart=XXXXXX
+_metadata.dcterms.isFormatOf=XXXXXX
+_metadata.dcterms.isPartOf=XXXXXX
+_metadata.dcterms.isReferencedBy=XXXXXX
+_metadata.dcterms.isReplacedBy=XXXXXX
 _metadata.dcterms.provenance=XXXXXX
 _metadata.dcterms.references=XXXXXX
 _metadata.dcterms.replaces=XXXXXX
