--- a/portal/src/main/resources/i18n/messages.properties
+++ b/portal/src/main/resources/i18n/messages.properties
@@ -55,7 +55,7 @@ _cms.version.approve=Approve this version
 _cms.version.approve.explain=By approving a version you permanently delete all the other versions of the page
 _cms.versions=Versions
 _facet.abm.county=county
-_facet.by.collection=null
+_facet.by.collection=By Collection
 _facet.by.country=By country
 _facet.by.date=By date
 _facet.by.language=By language
@@ -132,7 +132,7 @@ _locale.sk=Slovak (slo)
 _locale.sl=Slovenian (slv)
 _locale.sr=Serbian (scc)
 _locale.sv=Swedish (sve/swe)
-_metadata.abm.contentprovider=Provider
+_metadata.abm.contentProvider=Provider
 _metadata.abm.county=County
 _metadata.abm.municipality=Municipality
 _metadata.dc.contributor=Contributor
@@ -151,14 +151,14 @@ _metadata.dc.subject=Subject
 _metadata.dc.title=Title
 _metadata.dc.type=Type
 _metadata.dcterms.alternative=Alternative Title
-_metadata.dcterms.conforms.to=Conforms to
+_metadata.dcterms.conformsTo=Conforms to
 _metadata.dcterms.created=Date
-_metadata.dcterms.has.format=Has format
-_metadata.dcterms.has.part=Has part
-_metadata.dcterms.is.format.of=Is format of
-_metadata.dcterms.is.referenced.by=Is referenced by
-_metadata.dcterms.is.replaced.by=Is replaced by
-_metadata.dcterms.ispart.of=Is Part of
+_metadata.dcterms.hasFormat=Has format
+_metadata.dcterms.hasPart=Has part
+_metadata.dcterms.isFormatOf=Is format of
+_metadata.dcterms.isPartOf=Is Part of
+_metadata.dcterms.isReferencedBy=Is referenced by
+_metadata.dcterms.isReplacedBy=Is replaced by
 _metadata.dcterms.provenance=Provenance
 _metadata.dcterms.references=References
 _metadata.dcterms.replaces=Replaces
@@ -166,7 +166,7 @@ _metadata.dcterms.requires=Requires
 _metadata.dcterms.spatial=Spatial coverage
 _metadata.dcterms.temporal=Temporal coverage
 _metadata.europeana.country=Country
-_metadata.europeana.data.provider=Provider
+_metadata.europeana.dataProvider=Provider
 _metadata.europeana.provider=Provider
 _metadata.europeana.type=Type
 _metadata.searchfield.contributor=Contributor
@@ -251,22 +251,23 @@ _portal.ui.navigation.of=of
 _portal.ui.navigation.page=Page
 _portal.ui.navigation.results=Results
 _portal.ui.notification.error=Error
+_portal.ui.notification.generalErrorMessage=Something went wrong! An email has been sent to inform our technical staff.
+_portal.ui.notification.malFormedQuery=Unable to fulfil your request due to malformed query parameters.
 _portal.ui.notification.noitemsfound=No items found
+_portal.ui.notification.pleaseRegisterAgain=Please <a href="/${portalName}/login.html">register your email again</a> to finish registration.
+_portal.ui.notification.recordNotFound=<strong>Alert:</strong> Unable to find the requested Europeana Record. <strong>Please</strong> try another search.
+_portal.ui.notification.recordNotIndexed=<strong>Attention:</strong> Requested Europeana Record is yet indexed. <strong>Please</strong> try another search.
+_portal.ui.notification.recordRevoked=<strong>Attention:</strong> This item has been withdrawn by the provider. <strong>Please</strong> try another search.
+_portal.ui.notification.registrationIsExpired=The link you used to complete registration is invalid or has expired.
+_portal.ui.notification.solrUnreachable=<strong>Alert:</strong> Unable to get a response from the Search Engine. <strong>Please</strong> try another search later.
+_portal.ui.notification.tryAnotherSearch=<strong>Please</strong> try another search.
 _portal.ui.reset.searchbox=Reset
 _portal.ui.viewingrelateditems=You are viewing related items
-_portal.ui.notification.recordNotFound=<strong>Alert:</strong> Unable to find the requested Europeana Record. <strong>Please</strong> try another search.
-_portal.ui.notification.tryAnotherSearch=<strong>Please</strong> try another search.
-_portal.ui.notification.generalErrorMessage=Something went wrong! An email has been sent to inform our technical staff.
-_portal.ui.notification.recordRevoked=<strong>Attention:</strong> This item has been withdrawn by the provider. <strong>Please</strong> try another search.
-_portal.ui.notification.solrUnreachable=<strong>Alert:</strong> Unable to get a response from the Search Engine. <strong>Please</strong> try another search later.
-_portal.ui.notification.malFormedQuery=Unable to fullfill your request due to malformed query parameters.
-_portal.ui.notification.recordNotIndexed=<strong>Attention:</strong> Requested Europeana Record is yet indexed. <strong>Please</strong> try another search.
-_portal.ui.notification.registrationIsExpired=The link you used to complete registration is invalid or has expired.
-_portal.ui.notification.pleaseRegisterAgain=Please <a href="/${portalName}/login.html">register your email again</a> to finish registration.
 _search.boolean.and=and
 _search.boolean.not=not
 _search.boolean.or=or
 _search.field.any.field=Any field
+_search.field.collection=Collection
 _search.field.country=Country
 _search.field.creator=Creator
 _search.field.date=Date
