--- a/portal/src/main/resources/i18n/messages_hy.properties
+++ b/portal/src/main/resources/i18n/messages_hy.properties
@@ -112,13 +112,13 @@ _metadata.dc.subject=Subject
 _metadata.dc.title=Title
 _metadata.dc.type=Type
 _metadata.dcterms.alternative=Alternative Title
-_metadata.dcterms.conforms.to=Conforms to
-_metadata.dcterms.has.format=Has format
-_metadata.dcterms.has.part=Has part
-_metadata.dcterms.is.format.of=Is format of
-_metadata.dcterms.is.referenced.by=Is referenced by
-_metadata.dcterms.is.replaced.by=Is replaced by
-_metadata.dcterms.ispart.of=Is Part of
+_metadata.dcterms.conformsTo=Conforms to
+_metadata.dcterms.hasFormat=Has format
+_metadata.dcterms.hasPart=Has part
+_metadata.dcterms.isFormatOf=Is format of
+_metadata.dcterms.isPartOf=Is Part of
+_metadata.dcterms.isReferencedBy=Is referenced by
+_metadata.dcterms.isReplacedBy=Is replaced by
 _metadata.dcterms.provenance=Provenance
 _metadata.dcterms.references=References
 _metadata.dcterms.replaces=Replaces
