--- a/portal/src/main/resources/i18n/messages_no.properties
+++ b/portal/src/main/resources/i18n/messages_no.properties
@@ -96,7 +96,7 @@ _locale.sk=Slovakisk
 _locale.sl=Slovensk
 _locale.sr=Serbisk
 _locale.sv=Svensk
-_metadata.abm.contentprovider=Institusjon
+_metadata.abm.contentProvider=Institusjon
 _metadata.abm.county=Fylke
 _metadata.abm.municipality=Kommune
 _metadata.dc.contributor=Bidragsyter
@@ -115,13 +115,13 @@ _metadata.dc.subject=Emne
 _metadata.dc.title=Tittel
 _metadata.dc.type=Ressurstype
 _metadata.dcterms.alternative=Alternativ tittel
-_metadata.dcterms.conforms.to=Er i samsvar med
-_metadata.dcterms.has.format=Har format
-_metadata.dcterms.has.part=Har del
-_metadata.dcterms.is.format.of=Er format av
-_metadata.dcterms.is.referenced.by=Er referert av
-_metadata.dcterms.is.replaced.by=Er erstattet av
-_metadata.dcterms.ispart.of=Del av
+_metadata.dcterms.conformsTo=Er i samsvar med
+_metadata.dcterms.hasFormat=Har format
+_metadata.dcterms.hasPart=Har del
+_metadata.dcterms.isFormatOf=Er format av
+_metadata.dcterms.isPartOf=Del av
+_metadata.dcterms.isReferencedBy=Er referert av
+_metadata.dcterms.isReplacedBy=Er erstattet av
 _metadata.dcterms.provenance=proveniens
 _metadata.dcterms.references=Refererer til
 _metadata.dcterms.replaces=Erstatter
@@ -129,7 +129,7 @@ _metadata.dcterms.requires=Forutsetter
 _metadata.dcterms.spatial=Sted
 _metadata.dcterms.temporal=Tidsrom
 _metadata.europeana.country=Land
-_metadata.europeana.data.provider=Tilbyder
+_metadata.europeana.dataProvider=Tilbyder
 _metadata.europeana.provider=Tilbyder
 _metadata.europeana.type=Type
 _metadata.searchfield.contributor=Bidragsyter
