--- a/portal/src/main/resources/i18n/messages_sk.properties
+++ b/portal/src/main/resources/i18n/messages_sk.properties
@@ -112,13 +112,13 @@ _metadata.dc.subject=Predmet
 _metadata.dc.title=Názov
 _metadata.dc.type=Typ
 _metadata.dcterms.alternative=Alternatívny názov
-_metadata.dcterms.conforms.to=Vyhovuje
-_metadata.dcterms.has.format=Má formát
-_metadata.dcterms.has.part=Má súčasť
-_metadata.dcterms.is.format.of=Je formátom
-_metadata.dcterms.is.referenced.by=Je citovaný
-_metadata.dcterms.is.replaced.by=Je nahradený
-_metadata.dcterms.ispart.of=Je súčasťou
+_metadata.dcterms.conformsTo=Vyhovuje
+_metadata.dcterms.hasFormat=Má formát
+_metadata.dcterms.hasPart=Má súčasť
+_metadata.dcterms.isFormatOf=Je formátom
+_metadata.dcterms.isPartOf=Je súčasťou
+_metadata.dcterms.isReferencedBy=Je citovaný
+_metadata.dcterms.isReplacedBy=Je nahradený
 _metadata.dcterms.provenance=Proveniencia
 _metadata.dcterms.references=Odkazy
 _metadata.dcterms.replaces=Nahrádza
