basic themeing in multiple templates

--- a/portal/src/main/resources/i18n/messages.properties
+++ b/portal/src/main/resources/i18n/messages.properties
@@ -182,6 +182,8 @@ _mine.delete=Delete
 _mine.email.address=Email address
 _mine.firstname=First name
 _mine.forgotpassword=I forgot my password
+_mine.forgotpassword.new.password=New password
+_mine.forgotpassword.new.password.repeat=Repeat new password
 _mine.itemsaved=Item saved
 _mine.itemsavefailed=Save item failed
 _mine.last.name=Last name
