misc front-end fixes
GeoHash: http://maps.google.com/maps?q=MyCodingMap@52.066005,4.301189

--- a/portal/src/main/resources/i18n/messages.properties
+++ b/portal/src/main/resources/i18n/messages.properties
@@ -51,6 +51,7 @@ _cms.rename=Rename
 _cms.save=Save
 _cms.update=Update
 _cms.upload=Upload
+_cms.version.management=version management
 _cms.version.approve=Approve this version
 _cms.version.approve.explain=By approving a version you permanently delete all the other versions of the page
 _cms.versions=Versions
