--- a/portal/src/main/resources/i18n/messages_no.properties
+++ b/portal/src/main/resources/i18n/messages_no.properties
@@ -15,10 +15,45 @@ _action.return.to.results=Gå til resultater
 _action.save.this.search=Lagre dette søket
 _action.save.to.mine=Lagre i Mitt Norvegiana
 _action.search=Søk
+_action.search.order.by=Order by
 _action.see.all.related.items=Se alle relaterte objekter
 _action.send=Send
 _action.share.with.friend=Del med en venn
 _action.view.in.original.context=Se i opprinnelig kontekst
+_cms.administration.images=Image administration
+_cms.administration.pages=Page administration
+_cms.administration.title=Administration
+_cms.administration.users=User administration
+_cms.cancel=Cancel
+_cms.create=Create
+_cms.delete=Delete
+_cms.edit=Edit
+_cms.existing.images=Existing images
+_cms.existing.pages=Existing pages
+_cms.goto.upload=Go to Upload
+_cms.html.editor.show.hide=Show / Hide HTML editor
+_cms.image.change=Change this image
+_cms.image.choose=Choose an image
+_cms.image.create=Create new image
+_cms.image.delete.fail=Image could not be deleted
+_cms.image.delete.question=Delete this image?
+_cms.image.list=Image list
+_cms.image.not.exist=This image does not exist
+_cms.image.rename=Rename this image
+_cms.image.upload.new=Upload new image
+_cms.page.create=Create a new page
+_cms.page.create.step.1=To create a new page enter the path (optional) and the name of the new page. The name must end with .dml
+_cms.page.create.step.2=The base path will be automatically created. Paths that follow are not mandatory but can help you with creating a logical structure for organizing and grouping pages.
+_cms.page.edit=Edit this page
+_cms.page.not.exist=This page does not exist
+_cms.rename=Rename
+_cms.save=Save
+_cms.update=Update
+_cms.upload=Upload
+_cms.version.management=version management
+_cms.version.approve=Approve this version
+_cms.version.approve.explain=By approving a version you permanently delete all the other versions of the page
+_cms.versions=Versions
 _facet.by.collection=null
 _facet.by.country=via land
 _facet.by.date=via dato
